--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
         <module>project-web</module>
         <module>project-common</module>
     </modules>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+    </dependencies>
 
 
 </project>
