--- a/project-web/src/main/resources/application.yml
+++ b/project-web/src/main/resources/application.yml
@@ -12,3 +12,8 @@ datasource:
   max-active: 20
   max-idle: 8
   min-idle: 8
+spring:
+  security:
+    user:
+      password: admin
+      name: admin
